package com.sep490.slms2026.enums;

public enum HostExpenseCategory {
    LEASE,
    MAINTENANCE,
    EQUIPMENT,
    MANAGEMENT,
    UTILITY,
    OTHER
}
